<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageSelection" >
	
    <TextView 
        android:id="@+id/select_image_text"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"/>
    
    <Button
        android:id="@+id/from_gallery"
        android:layout_below="@id/select_image_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/select_from_gallery"
        android:onClick="selectFromGallery" />
	<Button
        android:id="@+id/take_photo"
        android:layout_below="@id/from_gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/take_photo"
        android:onClick="takePicture" />
</RelativeLayout>
