<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectStaticImage" >

    <Button
        android:id="@+id/drink"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/drink_thumb"
        android:text="@string/drink"
        android:onClick="imageSelectedIntent" />
    
    <Button
        android:id="@+id/sunflower"
        android:layout_below="@id/drink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/sunflower_thumb"
        android:text="@string/sunflower"
        android:onClick="imageSelectedIntent" />
    
    <Button
        android:id="@+id/abstract_art"
        android:layout_below="@id/sunflower"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/abstract_art_thumb"
        android:text="@string/abstract_art"
        android:onClick="imageSelectedIntent" />

</RelativeLayout>
